k8s/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: us-central1-docker.pkg.dev/desafio-pipeline/desafio-pipeline:TAG_AQUI
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
