k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: stage
spec:
  selector:
    app: frontend
  ports:
    - port: 5000
      targetPort: 5000
  type: LoadBalancer
